fixed main navbar which was causing overflow from main document

--- a/style.css
+++ b/style.css
@@ -211,14 +211,22 @@ nav ul li {
     text-decoration: none;
 }
 
+.banner-container {
+    width: 100%;
+    height: auto;
+    position: relative;
+    overflow: hidden;
+}
+
 .main-banner {
     width: 100%;
     height: 18rem;
-    background-size: cover;
     background: url("./Assets/banner-mobile1.png") no-repeat;
+    background-size: cover;
     opacity: 1;
     padding-left: 1rem;
     padding-top: 1rem;
+    position: absolute;
 }
 
 .banner-text {
@@ -429,13 +437,13 @@ footer {
     padding: 1rem 0;
     font-size: .75rem;
 }
+
 @media (max-width: 40em) {
     .greetings-grid {
         display: grid;
         grid-template-rows: 1fr auto;
         margin-inline: 1rem;
         row-gap: 1.5rem;
-        border: blue 2px solid;
     }
     .greetings-image {
         margin-inline: auto;
@@ -451,9 +459,7 @@ footer {
     /*header section*/
     .main-banner {
         height: 18rem;
-        width: 100%;
         background: url("./Assets/banner-tablet.png") no-repeat;
-        background-size: cover;
         padding-left: 6rem;
         padding-top: 5rem;
     }
@@ -515,7 +521,7 @@ footer {
     .main-nav {
         position: fixed;
         z-index: 999;
-        inset: 0 0 0 20%;
+        inset: 0 0 0 25%;
         list-style: none;
         padding: min(2rem, 5vh);
         margin: 0;
